--- a/en/index.html
+++ b/en/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
+    <title>Al'Muhira</title>
     <meta charset="UTF-8">
     <meta name="description" content="Al'muhira is a company offering high-end human resources services in Burundi">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="yHYWt7KaXBMyUf9VcorSjJb-3uadrwPWuxUOMNYZcAw" />
+
+
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
@@ -14,19 +16,19 @@
     <link rel="stylesheet" href="../styles/almuhira.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/ee175aa0d8.js" crossorigin="anonymous"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Al'Muhira</title>
+
+
+    <script src="https://kit.fontawesome.com/ee175aa0d8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <section id="home" class="home">
         <nav class="home_navigation_menu">
             <i class="fas fa-bars amburger"></i>
-            <!-- <h1 id="logo">Al'Muhira</h1> -->
             <a href="/">
                 <img src="../imgs/logo_almuhira2.png" alt="Almuhira" width="65" height="65">
             </a>
@@ -56,11 +58,12 @@
                         of <br> <span id="color_beauty">employee.</span> </h1>
                     <p>
                         Entrepreneurs and candidates working in different sectors of activity
-                         can count on
-                         us to speed up their recruitment process or their job search.
+                        can count on
+                        us to speed up their recruitment process or their job search.
                     </p>
                 </div>
-                <img id="svg_background" src="../imgs/almuhira_find_a_job2.png" alt="find_a_job_eng" width="700" height="650">
+                <img id="svg_background" src="../imgs/almuhira_find_a_job2.png" alt="find_a_job_eng" width="700"
+                    height="650">
             </div>
         </div>
     </section>
@@ -76,17 +79,17 @@
                             <i class="fas fa-users"></i>
                             <p>
                                 We are company offering
-                                 its clients a full range of specialized services in
-                                 matter of human resources.
+                                its clients a full range of specialized services in
+                                matter of human resources.
                             </p>
                         </li>
                         <li class="swip reveal">
                             <i class="fas fa-sitemap"></i>
                             <p>
                                 We have a dedicated team, experienced with many years of practice in the
-                                 domain
-                                 of Human Resources, having made its place and being the leader in recruitment, training
-                                 and placement of staff in different entities.
+                                domain
+                                of Human Resources, having made its place and being the leader in recruitment, training
+                                and placement of staff in different entities.
                             </p>
                         </li>
                     </ul>
@@ -126,8 +129,8 @@
                 </span>
                 <p>
                     What sets us apart is our ability to offer our clients a turnkey approach
-                     including the
-                     different HR services they actually need
+                    including the
+                    different HR services they actually need
                 </p>
                 <span>&#8594;</span>
             </div>
@@ -142,16 +145,16 @@
                 </span>
                 <p>
                     Sound management of human resources is an essential ingredient for the success of a business.
-                     Issues such as the quality of life at work,
-                     the effectiveness of the teams and the competence of the employees
-                     must therefore be taken seriously.
+                    Issues such as the quality of life at work,
+                    the effectiveness of the teams and the competence of the employees
+                    must therefore be taken seriously.
 
-                     Thanks to expertise acquired over the years,
-                     we can offer you personalized support by
-                     in HR management, helping you achieve your
-                     performance and growth goals. In short, we
-                     spare no effort to develop innovative strategies
-                     allowing you to optimize your human capital.
+                    Thanks to expertise acquired over the years,
+                    we can offer you personalized support by
+                    in HR management, helping you achieve your
+                    performance and growth goals. In short, we
+                    spare no effort to develop innovative strategies
+                    allowing you to optimize your human capital.
 
                 </p>
                 <span>&#8594;</span>
@@ -180,22 +183,23 @@
 
             <p>
                 When you decide to delegate part or all of your human resources management
-                 to our company, we do not become just your service provider, but rather a partner
-                 business that cares about the health and growth of your business.
-                 We therefore take the time to identify your real needs, expectations and objectives in order to define
-                 a tailor-made formula, 100% adapted to the structure of your organization. Of course, this one
-                 will respect your budget and even allow you to save time and money…
+                to our company, we do not become just your service provider, but rather a partner
+                business that cares about the health and growth of your business.
+                We therefore take the time to identify your real needs, expectations and objectives in order to define
+                a tailor-made formula, 100% adapted to the structure of your organization. Of course, this one
+                will respect your budget and even allow you to save time and money…
             </p>
         </div>
     </section>
     <section class="recrutement_process">
         <div class="process_container">
-            <h1 class="titles"><span id="color_beauty">Approved</span> recruitment process  </h1>
+            <h1 class="titles"><span id="color_beauty">Approved</span> recruitment process </h1>
             <div class="single_process_container reveal">
                 <span>1</span>
                 <p>
-                    The candidate who submits his application for a position posted at AL'MUHIRA S.A is guaranteed to see his
-                     application treated with confidentiality, professionalism and rigor.
+                    The candidate who submits his application for a position posted at AL'MUHIRA S.A is guaranteed to
+                    see his
+                    application treated with confidentiality, professionalism and rigor.
                 </p>
             </div>
             <div class="single_process_container reveal">
@@ -217,7 +221,7 @@
                 <span>4</span>
                 <p>
                     We determine the recruitment strategy adapted to the position to be filled (posting, media plan,
-                     raiding) </p>
+                    raiding) </p>
             </div>
             <div class="single_process_container reveal">
                 <span>5</span>
@@ -232,30 +236,31 @@
                 <span>6</span>
                 <p>
                     Insofar as the candidate interviewed was not selected for the job applied for, but
-                     whose application remains relevant for another available or future position, we
-                     undertake to keep it, after having obtained the prior authorization of the candidate, for any other
-                     position corresponding to his profile. </p>
+                    whose application remains relevant for another available or future position, we
+                    undertake to keep it, after having obtained the prior authorization of the candidate, for any other
+                    position corresponding to his profile. </p>
             </div>
         </div>
 
         <div class="quote">
             <div class="pdg_words reveal">
                 <h2>
-                    We have never been afraid of  <span id="color_beauty">commitment !</span>
+                    We have never been afraid of <span id="color_beauty">commitment !</span>
                 </h2>
                 <p>
                     Our commitment to our customers is to provide them with the flexibility they need to
-                     achievement
-                     of their daily operations and contribute concretely to the success of their business.
-                     To achieve this, we offer them a complete and personalized service in terms of resources.
-                     human. This can include outsourcing, recruiting and even management. <br> The
-                     leaders
-                     and
-                     managers can thus concentrate their energies and resources in their area
-                     of expertise
-                     own.
-                     It is therefore no coincidence that since our foundation, we have been able to keep the majority of our
-                     clients.
+                    achievement
+                    of their daily operations and contribute concretely to the success of their business.
+                    To achieve this, we offer them a complete and personalized service in terms of resources.
+                    human. This can include outsourcing, recruiting and even management. <br> The
+                    leaders
+                    and
+                    managers can thus concentrate their energies and resources in their area
+                    of expertise
+                    own.
+                    It is therefore no coincidence that since our foundation, we have been able to keep the majority of
+                    our
+                    clients.
 
                 </p>
             </div>
@@ -266,8 +271,8 @@
             <h1 class="titles">Contact us</h1>
             <p>
                 Do you have any questions for us regarding our various HR services? Whether you are a
-                 candidate looking for a job or an employer looking for new talent, do not hesitate to contact us
-                 join.
+                candidate looking for a job or an employer looking for new talent, do not hesitate to contact us
+                join.
             </p>
             <div class="contact_card">
                 <div class="card_content">
@@ -293,14 +298,22 @@
             <input type="tel" placeholder="Entrer votre numéro de telephone*" name="Phonenumber" id="telephone">
             <textarea id="message" cols="30" rows="7" name="message"
                 placeholder="Entrer votre message ici !*"></textarea>
-            <input type="submit" value="Submit" id="button">
+                <button type="submit" id="submit">
+                    Send
+                    <div class="loading"></div>
+                </button>
         </form>
 
     </section>
     <footer>
         <div class="muhira">
-            <p> <span id="color_beauty">Al'Muhira</span> all right reserved</p>
-            <p>&copy;2022</p>
+            <p> <span id="color_beauty">Al'Muhira</span> all right reserved &copy;</p>
+            <p id="dateNow">
+                <script>
+                    let myDate = new Date
+                    document.querySelector('#dateNow').innerText = myDate.getFullYear().toString();
+                </script>
+            </p>
         </div>
         <div class="muhira">
             <p>Powered by <a target="-blanck" href='https://madosgroup.com' style="color:#ff7800 ;">Mados Group</a></p>
