finishind 3d element and adding ceo picture

--- a/en/index.html
+++ b/en/index.html
@@ -116,6 +116,48 @@
                 </div>
             </div>
     </section>
+    <section class="who_we_work_with">
+        <div class="txt_container">
+            <h1 id="big_title">Where job are <span id="color_beauty">available?</span></h1>
+            <P>
+                We offer you the places where there is a great demand for labour... all over the world. here are the
+                countries where you can work: Dubai, Saudi Arabia, Qatar, Canada.
+            </P>
+        </div>
+        </div>
+        <div class="cube_container">
+            <div class="cube_box">
+                <div class="cube_side front">
+                    <img src="../imgs/dubai.jpg" alt="Almuhira_Dubai">
+                    <h2>DubaÏ</h2>
+                </div>
+                <div class="cube_side back">
+                    <h2>Quatar</h2>
+                    <img src="../imgs/doha.jpg" alt="Almuhira_Quatar">
+
+                </div>
+                <div class="cube_side left">
+                    <h2>Canada</h2>
+                    <img src="../imgs/canada.jpg" alt="Almuhira_Canada">
+
+                </div>
+                <div class="cube_side right">
+                    <h2>Saudi-arabia</h2>
+                    <img src="../imgs/saudi_arabia2.jpg" alt="Almuhira_Saudi_arabia">
+
+                </div>
+                <div class="cube_side top">
+                    <img src="../imgs/canada2.jpg" alt="Almuhira_Canada">
+                    <h2>Canada</h2>
+                </div>
+                <div class="cube_side bottom">
+                    <h2>Quatar</h2>
+                    <img src="../imgs/doha.jpg" alt="Almuhira_quatar">
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <section id="services" class="Services">
         <div class="Facilities">
             <div class="single_facility reveal">
@@ -298,10 +340,10 @@
             <input type="tel" placeholder="Entrer votre numéro de telephone*" name="Phonenumber" id="telephone">
             <textarea id="message" cols="30" rows="7" name="message"
                 placeholder="Entrer votre message ici !*"></textarea>
-                <button type="submit" id="submit">
-                    Send
-                    <div class="loading"></div>
-                </button>
+            <button type="submit" id="submit">
+                Send
+                <div class="loading"></div>
+            </button>
         </form>
 
     </section>
