--- a/index.html
+++ b/index.html
@@ -114,6 +114,48 @@
                 </div>
             </div>
     </section>
+    <section class="who_we_work_with">
+        <div class="txt_container">
+            <h1 id="big_title">Où sont les emplois <span id="color_beauty">disponibles?</span></h1>
+            <P>
+                Nous vous offrons les endroits où il y a une grande demande de main-d'œuvre... partout dans le monde.
+                voici les pays où vous pouvez travailler : Dubaï, Arabie Saoudite, Qatar, Canada.
+            </P>
+        </div>
+        </div>
+        <div class="cube_container">
+            <div class="cube_box">
+                <div class="cube_side front">
+                    <img src="./imgs/dubai.jpg" alt="">
+                    <h2>DubaÏ</h2>
+                </div>
+                <div class="cube_side back">
+                    <h2>Quatar</h2>
+                    <img src="./imgs/doha.jpg" alt="">
+
+                </div>
+                <div class="cube_side left">
+                    <h2>Canada</h2>
+                    <img src="./imgs/canada.jpg" alt="">
+
+                </div>
+                <div class="cube_side right">
+                    <h2>Saudi-arabia</h2>
+                    <img src="./imgs/saudi_arabia2.jpg" alt="">
+
+                </div>
+                <div class="cube_side top">
+                    <img src="./imgs/canada2.jpg" alt="">
+                    <h2>Canada</h2>
+                </div>
+                <div class="cube_side bottom">
+                    <h2>Quatar</h2>
+                    <img src="./imgs/doha.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <section id="services" class="Services">
         <div class="Facilities">
             <div class="single_facility reveal">
@@ -262,44 +304,55 @@
             </div>
         </div>
     </section>
-    <section id="Contact-us" class="contact_us_container">
-        <div class="contact_text">
-            <h1 class="titles">Contacter nous</h1>
-            <p>
-                Vous avez des questions à nous adresser concernant nos différents services RH? Que vous soyez un
-                candidat à la recherche d’un emploi ou un employeur en quête de nouveaux talents, n’hésitez pas à nous
-                joindre.
-            </p>
-            <div class="contact_card">
-                <div class="card_content">
-                    <i class="fas fa-phone-alt"></i>
-                    <ul>
-                        <li>+257 62 34 35 77</li>
-                        <li>+257 79 49 00 99</li>
-                    </ul>
-                </div>
-                <div class="card_content">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <p>Boulevard Melchior Ndadaye no 77
-                        House : peace corner
-                    </p>
-                </div>
+    <section id="Contact-us" class="contact_us_container_main">
+        <div class="ceo_container">
+            <!-- <h3>pdg</h3> -->
+            <img src="./imgs/pdg.jpg" alt="pdg_almuhira" title="Almuhira_pdg">
+            <div class="name_container">
+                <h5>Nshimirimana Muhammad</h5>
+                <p>C.E.O</p>
             </div>
         </div>
 
-        <form id="FormData" class="contact_form" oninput="form(event)" onsubmit="handleSubmit(event)">
-            <input type="text" placeholder="Entrer votre nom*" id="Name" name="Name">
-            <input type="text" placeholder="Entrer le nom de votre Entreprise*" name="EtsName" id="Entreprise">
-            <input type="email" placeholder="Entre votre E-mail*" id="E-mail" name="email">
-            <input type="tel" placeholder="Entrer votre numéro de telephone*" name="Phonenumber" id="telephone">
-            <textarea id="message" cols="30" rows="7" name="message"
-                placeholder="Entrer votre message ici !*"></textarea>
+        <div class="contact_us_container">
+            <div class="contact_text">
+                <h1 class="titles">Contacter nous</h1>
+                <p>
+                    Vous avez des questions à nous adresser concernant nos différents services RH? Que vous soyez un
+                    candidat à la recherche d’un emploi ou un employeur en quête de nouveaux talents, n’hésitez pas à
+                    nous
+                    joindre.
+                </p>
+                <div class="contact_card">
+                    <div class="card_content">
+                        <i class="fas fa-phone-alt"></i>
+                        <ul>
+                            <li>+257 62 34 35 77</li>
+                            <li>+257 79 49 00 99</li>
+                        </ul>
+                    </div>
+                    <div class="card_content">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>Boulevard Melchior Ndadaye no 77
+                            House : peace corner
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <form id="FormData" class="contact_form" oninput="form(event)" onsubmit="handleSubmit(event)">
+                <input type="text" placeholder="Entrer votre nom*" id="Name" name="Name">
+                <input type="text" placeholder="Entrer le nom de votre Entreprise*" name="EtsName" id="Entreprise">
+                <input type="email" placeholder="Entre votre E-mail*" id="E-mail" name="email">
+                <input type="tel" placeholder="Entrer votre numéro de telephone*" name="Phonenumber" id="telephone">
+                <textarea id="message" cols="30" rows="7" name="message"
+                    placeholder="Entrer votre message ici !*"></textarea>
 
-            <button type="submit" id="submit">
-                Envoyer
-                <div class="loading"></div>
-            </button>
-        </form>
+                <button type="submit" id="submit">
+                    Envoyer
+                    <div class="loading"></div>
+                </button>
+            </form>
+        </div>
 
     </section>
     <footer>
