--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <section id="Contact-us" class="contact_us_container_main">
         <div class="ceo_container">
             <!-- <h3>pdg</h3> -->
-            <img src="./imgs/pdg.jpg" alt="pdg_almuhira" title="Almuhira_pdg">
+            <img src="./imgs/pdg.png" alt="pdg_almuhira" title="Almuhira_pdg">
             <div class="name_container">
                 <h5>Nshimirimana Muhammad</h5>
                 <p>C.E.O</p>
