--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
             <div class="name_container">
                 <h5>Nshimirimana Muhammad</h5>
                 <p>C.E.O</p>
+                <p>muhammad@al-muhira.com</p>
+                <p> <i class="fas fa-whatsapp"></i> +257 79 49 00 99</p>
             </div>
         </div>
 
@@ -325,6 +327,12 @@
                 </p>
                 <div class="contact_card">
                     <div class="card_content">
+                        <i class="fas fa-email-alt"></i>
+                        <ul>
+                            <li>info@al-muhira.com</li>
+                        </ul>
+                    </div>
+                    <div class="card_content">
                         <i class="fas fa-phone-alt"></i>
                         <ul>
                             <li>+257 62 34 35 77</li>
@@ -337,6 +345,7 @@
                             House : peace corner
                         </p>
                     </div>
+                    
                 </div>
             </div>
             <form id="FormData" class="contact_form" oninput="form(event)" onsubmit="handleSubmit(event)">
