--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="cube_container">
             <div class="cube_box">
                 <div class="cube_side front">
-                    <img src="./imgs/dubai.jpg" alt="">
+                    <img src="./imgs/dubai2.jpg" alt="">
                     <h2>DubaÏ</h2>
                 </div>
                 <div class="cube_side back">
@@ -145,8 +145,8 @@
 
                 </div>
                 <div class="cube_side top">
-                    <img src="./imgs/canada2.jpg" alt="">
-                    <h2>Canada</h2>
+                    <img src="./imgs/dubai.jpg" alt="">
+                    <h2>Dubai</h2>
                 </div>
                 <div class="cube_side bottom">
                     <h2>Quatar</h2>
@@ -311,8 +311,16 @@
             <div class="name_container">
                 <h5>Nshimirimana Muhammad</h5>
                 <p>C.E.O</p>
-                <p>muhammad@al-muhira.com</p>
-                <p> <i class="fas fa-whatsapp"></i> +257 79 49 00 99</p>
+                <span class="contact">
+                    <span class="cnt">
+                        <i class="fas fa-envelope"></i>
+                        <p>muhammad@al-muhira.com</p>
+                    </span>
+                    <span class="cnt">
+                        <i class="fab fa-whatsapp"></i>
+                        <p>+257 79 49 00 99</p>
+                    </span>
+                </span>
             </div>
         </div>
 
@@ -326,17 +334,18 @@
                     joindre.
                 </p>
                 <div class="contact_card">
-                    <div class="card_content">
-                        <i class="fas fa-email-alt"></i>
-                        <ul>
-                            <li>info@al-muhira.com</li>
-                        </ul>
-                    </div>
+
                     <div class="card_content">
                         <i class="fas fa-phone-alt"></i>
                         <ul>
                             <li>+257 62 34 35 77</li>
-                            <li>+257 79 49 00 99</li>
+                            <!-- <li>+257 79 49 00 99</li> -->
+                        </ul>
+                    </div>
+                    <div class="card_content">
+                        <i class="fas fa-envelope"></i>
+                        <ul>
+                            <li>info@al-muhira.com</li>
                         </ul>
                     </div>
                     <div class="card_content">
@@ -345,7 +354,7 @@
                             House : peace corner
                         </p>
                     </div>
-                    
+
                 </div>
             </div>
             <form id="FormData" class="contact_form" oninput="form(event)" onsubmit="handleSubmit(event)">
