--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                 <div class="statistic_displayer">
                     <div class="statistic_container">
                         <div class="single_statistic_displayer">
-                            <h2>+100</h2>
-                            <p>Recruté</p>
+                            <h2>+180</h2>
+                            <p>Recrutés</p>
                         </div>
                         <div class="single_statistic_displayer">
-                            <h2>+180</h2>
+                            <h2>+100</h2>
                             <p>Formés</p>
                         </div>
                         <div class="single_statistic_displayer">
@@ -107,8 +107,8 @@
                             <p>Placés</p>
                         </div>
                         <div class="single_statistic_displayer">
-                            <h2>+50</h2>
-                            <p>Partenaire</p>
+                            <h2>5</h2>
+                            <p>Pays</p>
                         </div>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
         <div class="txt_container">
             <h1 id="big_title">Où sont les emplois <span id="color_beauty">disponibles?</span></h1>
             <P>
-                Nous vous offrons les endroits où il y a une grande demande de main-d'œuvre... partout dans le monde.
-                voici les pays où vous pouvez travailler : Dubaï, Arabie Saoudite, Qatar, Canada.
+                Notre réseau d'employeurs est composé d'employeurs basés dans des pays où la demande de main-d'œuvre est importante.
+                Entre autres Dubaï, le Canada, l'Arabie Saoudite et le Qatar.
             </P>
         </div>
         </div>
@@ -307,10 +307,10 @@
     <section id="Contact-us" class="contact_us_container_main">
         <div class="ceo_container">
             <!-- <h3>pdg</h3> -->
-            <img src="./imgs/pdg.png" alt="pdg_almuhira" title="Almuhira_pdg">
+            <img src="./imgs/pdg.jpg" alt="pdg_almuhira" title="Almuhira_pdg">
             <div class="name_container">
                 <h5>Nshimirimana Muhammad</h5>
-                <p>C.E.O</p>
+                <p>P.D.G</p>
                 <span class="contact">
                     <span class="cnt">
                         <i class="fas fa-envelope"></i>
@@ -358,12 +358,12 @@
                 </div>
             </div>
             <form id="FormData" class="contact_form" oninput="form(event)" onsubmit="handleSubmit(event)">
-                <input type="text" placeholder="Entrer votre nom*" id="Name" name="Name">
-                <input type="text" placeholder="Entrer le nom de votre Entreprise*" name="EtsName" id="Entreprise">
-                <input type="email" placeholder="Entre votre E-mail*" id="E-mail" name="email">
-                <input type="tel" placeholder="Entrer votre numéro de telephone*" name="Phonenumber" id="telephone">
+                <input type="text" placeholder="Entrer votre nom*" id="Name" name="Name" required>
+                <input type="text" placeholder="Entrer le nom de votre Entreprise*" name="EtsName" id="Entreprise" required>
+                <input type="email" placeholder="Entre votre E-mail*" id="E-mail" name="email" required>
+                <input type="tel" placeholder="Entrer votre numéro de telephone*" name="Phonenumber" id="telephone" required>
                 <textarea id="message" cols="30" rows="7" name="message"
-                    placeholder="Entrer votre message ici !*"></textarea>
+                    placeholder="Entrer votre message ici !*" required></textarea>
 
                 <button type="submit" id="submit">
                     Envoyer
