--- a/form-application/index.html
+++ b/form-application/index.html
@@ -1,13 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Al'muhira est une societe offrant des services haute gamme en ressources humaines au Burundi">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../favicon_io/site.webmanifest">
     <link rel="stylesheet" href="../styles/application.css">
+    <link rel="stylesheet" href="../styles/almuhira.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/ee175aa0d8.js" crossorigin="anonymous"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <title>Application | Almuhira</title>
 </head>
+
 <body>
 
+    <div class="Container">
+        <header>
+            <h1>Employment application <span id="color_beauty">form</span></h1>
+            <img src="../imgs/logo_almuhira2.png" alt="logo almuhira" title="Apply form" width="45" height="45">
+        </header>
+        <main>
+            <div class="notice">
+                <fieldset form="applicationForm" class="f_design">
+                    <div class="single_input">
+                        <label for="job_title">
+                            Job title
+                        </label>
+                        <input type="text" name="Job title" placeholder="Job title" required>
+                    </div>
+
+                    <div class="single_input">
+                        <label for="job_title">
+                            Job requisition*
+                        </label>
+                        <input type="text" name="Job requisition" placeholder="Job requisitions" required>
+                    </div>
+                </fieldset>
+                <p>
+                    Applications without a requisition number will
+                    not be considered . Complete one (1) application form for
+                    each job posting. You will be taken through
+                    steps to fulfill your application, <span id="color_beauty">please fill out
+                        all required inputs</span>.
+                </p>
+            </div>
+
+
+            <form id="applicationForm">
+                <p id="stepsleft" style="color: var(--backGroundColor);">
+                    1 / 3
+                </p>
+                <div class="fieldset_section">
+                    <fieldset>
+                        <legend>Section A : Eligibility to work in Canada</legend>
+                        <p>Please indicate your eligibility to work in Canada</p>
+                        <div class="input_wrapper checkbox">
+                            <div class="single_input">
+                                <input type="radio" name="eligibility options" id="pe">
+                                <label for="pe">Permanent eligibility(i.e. Canadian Citizen, Permanent Resident)</label>
+                            </div>
+                            <div class="single_input">
+                                <input type="radio" class="radio" name="eligibility options" id="crwp">
+                                <label for="crwp">Current valid work permit</label>
+                            </div>
+                            <div class="single_input">
+                                <input type="radio" name="eligibility options" id="eawp">
+                                <label for="eawp">Eligible to apply for a work permit</label>
+                            </div>
+                            <div class="single_input">
+                                <input type="radio" name="eligibility options" id="nec">
+                                <label for="nec">Not eligible to work in Canada</label>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Section B: Personal Data</legend>
+                        <p>Please provide your identity and current location information</p>
+                        <div class="input_wrapper">
+                            <div class="input_container">
+                                <div class="single_input">
+                                    <label for="lastname">Last Name</label>
+                                    <input type="text" name="Lastname" id="lastname" placeholder="lastname" required>
+                                </div>
+                                <div class="single_input">
+                                    <label for="firstname">First Name</label>
+                                    <input type="text" name="Firstname" id="firstname" placeholder="firstname" required>
+                                </div>
+                                <div class="single_input">
+                                    <label for="initial">Initial</label>
+                                    <input type="text" name="Initial" id="initial" placeholder="initial" required>
+                                </div>
+                            </div>
+                            <div class="input_container">
+                                <div class="single_input">
+                                    <label for="homephone">Home Phone *</label>
+                                    <input type="tel" name="homephone" id="homephone" placeholder="home phone" required>
+                                </div>
+                                <div class="single_input">
+                                    <label for="alternatephone">Alternate Phone</label>
+                                    <input type="tel" name="alternatephone" id="alternatephone"
+                                        placeholder="alternate phone">
+                                </div>
+                                <div class="single_input">
+                                    <label for="address">Address</label>
+                                    <input type="text" name="address" id="address" placeholder="address" required>
+                                </div>
+                            </div>
+                            <div class="input_container">
+                                <div class="single_input">
+                                    <label for="city">City*</label>
+                                    <input type="text" name="city" id="city" placeholder="city" required>
+                                </div>
+                                <div class="single_input">
+                                    <label for="province">Province</label>
+                                    <input type="text" name="province" id="province" placeholder="province">
+                                </div>
+                                <div class="single_input">
+                                    <label for="postalcode">Postal code</label>
+                                    <input type="number" name="address" id="postalcode" placeholder="postal code"
+                                        required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="input_wrapper centered">
+                            <div class="input_container ">
+                                <div class="single_input ">
+                                    <p>Were you previously employed within the City?</p>
+                                    <div class="single_input dontExpand">
+                                        <label for="yesq1"><b>Yes</b></label>
+                                        <input type="radio" name="decision" id="yesq1">
+                                        <label for="noq1"><b>No</b></label>
+                                        <input type="radio" name="decision" id="noq1">
+                                    </div>
+                                </div>
+                                <div class="single_input dontExpand">
+                                    <p>Are you currently employed with the City?</p>
+                                    <div class="single_input dontExpand">
+                                        <label for="yesq2"><b>Yes</b></label>
+                                        <input type="radio" name="decision2" id="yesq2">
+                                        <label for="noq2"><b>No</b></label>
+                                        <input type="radio" name="decision2" id="noq2">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="input_container">
+                                <div class="single_input">
+                                    <label for="payroll">what was/is your payroll number?</label>
+                                    <input type="number" name="payroll" id="payroll" placeholder="payroll number">
+                                </div>
+                                <div class="single_input">
+                                    <label for="department">Which department did/are you working in?</label>
+                                    <input type="text" name="department" id="department" placeholder="department" required>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="steps">
+                    <button>Previous</button>
+                    <button>Next</button>
+                </div>
+            </form>
+        </main>
+    </div>
+
 </body>
+
 </html>
