Edit and finishing design home page

--- a/form-application/index.html
+++ b/form-application/index.html
@@ -137,34 +137,62 @@
                         <div class="input_wrapper centered">
                             <div class="input_container ">
                                 <div class="single_input ">
-                                    <p>Were you previously employed within the City?</p>
-                                    <div class="single_input dontExpand">
-                                        <label for="yesq1"><b>Yes</b></label>
-                                        <input type="radio" name="decision" id="yesq1">
-                                        <label for="noq1"><b>No</b></label>
-                                        <input type="radio" name="decision" id="noq1">
+                                    <div class="wrapper centered">
+                                        <div class="input_container">
+                                            <p>Were you previously employed within the City?</p>
+                                            <div class="single_input dontExpand">
+                                                <label for="yesq1"><b>Yes</b></label>
+                                                <input type="radio" name="decision" id="yesq1">
+                                                <label for="noq1"><b>No</b></label>
+                                                <input type="radio" name="decision" id="noq1">
+                                            </div>
+                                        </div>
+                                        <div class="input_container">
+                                            <div class="single_input">
+                                                <!-- <label for="payroll">what was/is your payroll number?</label> -->
+                                                <input type="number" name="payroll" id="payroll"
+                                                    placeholder="payroll number">
+                                                <input type="text" name="department" id="department"
+                                                    placeholder="department" required>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="single_input dontExpand">
-                                    <p>Are you currently employed with the City?</p>
-                                    <div class="single_input dontExpand">
-                                        <label for="yesq2"><b>Yes</b></label>
-                                        <input type="radio" name="decision2" id="yesq2">
-                                        <label for="noq2"><b>No</b></label>
-                                        <input type="radio" name="decision2" id="noq2">
+                                <div class="single_input">
+                                    <div class="wrapper centered">
+                                        <div class="input_container">
+                                            <p>Are you currently employed with the City?</p>
+                                            <div class="single_input dontExpand">
+                                                <label for="yesq2"><b>Yes</b></label>
+                                                <input type="radio" name="decision2" id="yesq2">
+                                                <label for="noq2"><b>No</b></label>
+                                                <input type="radio" name="decision2" id="noq2">
+                                            </div>
+                                        </div>
+
+                                        <div class="input_container">
+                                            <div class="single_input">
+                                                <!-- <label for="department">Which department did/are you working in?</label> -->
+                                                <input type="number" name="payroll" id="payroll" placeholder="payroll number">
+                                                <input type="text" name="department" id="department" placeholder="department" required>
+                                            </div>
+                                        </div>
                                     </div>
+
                                 </div>
                             </div>
-                            <div class="input_container">
+                            <!-- <div class="input_container">
                                 <div class="single_input">
                                     <label for="payroll">what was/is your payroll number?</label>
                                     <input type="number" name="payroll" id="payroll" placeholder="payroll number">
+                                    <input type="text" name="department" id="department" placeholder="department" required>
                                 </div>
                                 <div class="single_input">
                                     <label for="department">Which department did/are you working in?</label>
+                                    <input type="number" name="payroll" id="payroll" placeholder="payroll number">
                                     <input type="text" name="department" id="department" placeholder="department" required>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </fieldset>
                 </div>
