--- a/form-application/index.html
+++ b/form-application/index.html
@@ -58,9 +58,10 @@
             </div>
 
 
+
             <form id="applicationForm">
                 <p id="stepsleft" style="color: var(--backGroundColor);">
-                    1 / 3
+                    Step 1 / 3
                 </p>
                 <div class="fieldset_section">
                     <fieldset>
@@ -173,8 +174,10 @@
                                         <div class="input_container">
                                             <div class="single_input">
                                                 <!-- <label for="department">Which department did/are you working in?</label> -->
-                                                <input type="number" name="payroll" id="payroll" placeholder="payroll number">
-                                                <input type="text" name="department" id="department" placeholder="department" required>
+                                                <input type="number" name="payroll" id="payroll"
+                                                    placeholder="payroll number">
+                                                <input type="text" name="department" id="department"
+                                                    placeholder="department" required>
                                             </div>
                                         </div>
                                     </div>
@@ -195,10 +198,11 @@
                             </div> -->
                         </div>
                     </fieldset>
+
                 </div>
                 <div class="steps">
-                    <button>Previous</button>
-                    <button>Next</button>
+                    <button type="button">Previous</button>
+                    <button type="button">Next</button>
                 </div>
             </form>
         </main>
