--- a/form-application/index.html
+++ b/form-application/index.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <title>Application | Almuhira</title>
+    <script src="../js//application.js" defer></script>
 </head>
 
 <body>
@@ -48,6 +49,7 @@
                         <input type="text" name="Job requisition" placeholder="Job requisitions" required>
                     </div>
                 </fieldset>
+                
                 <p>
                     Applications without a requisition number will
                     not be considered . Complete one (1) application form for
@@ -61,10 +63,10 @@
 
             <form id="applicationForm">
                 <p id="stepsleft" style="color: var(--backGroundColor);">
-                    Step 1 / 3
+                    Step <span style="color: var(--backGroundColor);"></span>
                 </p>
                 <div class="fieldset_section">
-                    <fieldset>
+                    <fieldset form="applicationForm">
                         <legend>Section A : Eligibility to work in Canada</legend>
                         <p>Please indicate your eligibility to work in Canada</p>
                         <div class="input_wrapper checkbox">
@@ -86,7 +88,7 @@
                             </div>
                         </div>
                     </fieldset>
-                    <fieldset>
+                    <fieldset form="applicationForm">
                         <legend>Section B: Personal Data</legend>
                         <p>Please provide your identity and current location information</p>
                         <div class="input_wrapper">
