--- a/form-application/index.html
+++ b/form-application/index.html
@@ -79,7 +79,8 @@
                                                 <label for="High school or GED"><b>Yes</b></label>
                                                 <input type="radio" name="High school or GED" id="High school or GED">
                                                 <label for="High school or GED no"><b>No</b></label>
-                                                <input type="radio" name="High school or GED" id="High school or GED no">
+                                                <input type="radio" name="High school or GED"
+                                                    id="High school or GED no">
                                             </div>
                                         </div>
                                         <div class="input_container">
@@ -268,10 +269,20 @@
                                         <input type="radio" name="equivalency" id="equivalencyNo">
                                     </div>
                                 </div>
+                                <br>
                                 <div class="single_input">
                                     <p>Please list any professional designation</p>
                                     <div class="single_input dontExpand">
-                                        <textarea name="designation" id="designation" cols="50" rows="2" placeholder="List any professional designation here"></textarea>
+                                        <textarea name="professional designation" cols="50" rows="2"
+                                            placeholder="List any professional designation here"></textarea>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="single_input">
+                                    <p>Additional Related Learning i.e. courses, in service training, etc.:</p>
+                                    <div class="single_input dontExpand">
+                                        <textarea name="Additional related learning" cols="50" rows="2"
+                                            placeholder="Additional related learning here"></textarea>
                                     </div>
                                 </div>
                             </div>
