--- a/form-application/index.html
+++ b/form-application/index.html
@@ -67,7 +67,7 @@
                 </p>
                 <div class="fieldset_section">
                     <fieldset form="applicationForm">
-                        <legend>Section C: Education and Training</legend>
+                        <legend>Section C: Education</legend>
                         <p>Please provide your educational background informations</p>
                         <div class="input_wrapper centered">
                             <div class="input_container ">
@@ -285,6 +285,7 @@
                                             placeholder="Additional related learning here"></textarea>
                                     </div>
                                 </div>
+                                <br>
                             </div>
 
 
@@ -301,6 +302,54 @@
                                 </div>
                             </div> -->
                         </div>
+                    </fieldset>
+                    <fieldset class="applicationForm">
+                        <legend>Section D : Training</legend>
+                        <p>Please provide any information about trains which was accomplished</p>
+                        <div class="input_wrapper">
+                            <div class="input_container">
+                                <div class="single_input">
+                                    <div class="input_container">
+                                        <div class="single_input column_direction">
+                                            <label for="name of the trade">Name of Trade</label>
+                                            <input type="text" name="name of the trade" id="name of the trade" placeholder="name of the trade">
+                                        </div>
+                                    </div>
+                                    <div class="input_container">
+                                        <div class="single_input column_direction">
+                                            <label for="Apprentice year completed">Apprentice Year Completed</label>
+                                            <select name="Apprentice year completed" id="Apprentice year completed">
+                                                <option value="">Apprentice Year Completed</option>
+                                                <option value="1">1</option>
+                                                <option value="2">2</option>
+                                                <option value="3">3</option>
+                                                <option value="4">4</option>
+
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="input_container">
+                                        <div class="single_input column_direction">
+                                            <label for="date completed">Year completed</label>
+                                            <input type="number" name="year completed" id="date completed" placeholder="Year completed">
+                                        </div>
+                                    </div>
+                                    <div class="input_container">
+                                        <div class="single_input column_direction">
+                                            <label for="license number">License Number</label>
+                                            <input type="number" name="license number" id="license number" placeholder="License number">
+                                        </div>
+                                    </div>
+                                    <div class="input_container">
+                                        <div class="single_input column_direction">
+                                            <label for="homephone">Province</label>
+                                            <input type="tel" name="homephone" id="homephone" placeholder="home phone" required>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p>add a trade</p>
                     </fieldset>
 
                 </div>
