Edit and adding mail server endpoint

--- a/form-application/index.html
+++ b/form-application/index.html
@@ -349,7 +349,9 @@
                                 </div>
                             </div>
                         </div>
-                        <p>add a trade</p>
+                        <span id="addTraining">
+                            <span tabindex="0" title="add a trade">+</span>
+                        </span>
                     </fieldset>
 
                 </div>
