Adding a react project in the web site for application form

--- a/form-application/index.html
+++ b/form-application/index.html
@@ -70,7 +70,7 @@
                         <legend>Section C: Education</legend>
                         <p>Please provide your educational background informations</p>
                         <select name="Education background" id="education" aria-multiselectable="true">
-                            <option value="Hscd">High School or GED </option>
+                            <option value="Hscd">High school or GED </option>
                             <option value="ptc"> Professional/Technical Certificate </option>
                             <option value="cd"> College diploma </option>
                             <option value="bd">Bachelor's degree</option>
